<resources>
    <string name="app_name">ArcanaQrMenu</string>
    <string name="restoran_bottom_menu_title">Рестораны</string>
    <string name="order_bottom_menu_title">Заказать</string>
    <string name="profile_bottom_menu_title">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wrong_email_or_password">Неправильный email или пароль</string>
    <string name="invalid_email">Неправильный email!</string>
    <string name="invalid_password">Неправильный пароль!</string>
    <string name="email_already_exists">Email уже зарегистрирован!</string>
    <string name="registration_page_title">Регистрация</string>
    <string name="login_page_title">Логин</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="register_btn_text">Зарегистрироваться</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="scan_qr">Сканировать QR</string>
</resources>