<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".views.fragments.LoginFragment">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="10dp"
        />
    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="10dp"
        />


    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:visibility="gone"
        android:textColor="@color/black"
        />

    <Button
        android:height="55dp"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn_text"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

    <TextView
        android:padding="10dp"
        android:id="@+id/goRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="регистрация"
        android:clickable="true"
        />

</LinearLayout>